k8s/tienda/templates/ingress/gateway-ms.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tienda-ingress
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: ImplementationSpecific
          backend:
            service:
              name: gateway-ms
              port:
                number: 3000
